--- a/elevisor/j2ee/config/EFJ.conf
+++ b/elevisor/j2ee/config/EFJ.conf
@@ -3,17 +3,17 @@
 #-------------------------------------------------------------------------------
 
 ##### Agent Info #####
-agent_info.name=HIHI
+agent_info.name=%ELEVISOR_J2EE_AGENT_NAME%
 agent_info.ip=
 agent_info.file.encoding=KSC5601
 agent.enable=true
-agent.license=
+agent.license=%ELEVISOR_J2EE_LICENSE%
 agent.lite.license=
 
 ##### Server Info #####        
-server_info.ip=127.0.0.1
-server_info.tcp.port.common=7701
-server_info.tcp.port.trace=7702
+server_info.ip=%ELEVISOR_IG_SERVER_IP%
+server_info.tcp.port.common=%ELEVISOR_J2EE_COMMON_PORT%
+server_info.tcp.port.trace=%ELEVISOR_J2EE_TRACE_PORT%
 
 ##### SecuLogic Config#####
 seculogic.send.enable=false
@@ -52,14 +52,14 @@ trace.jdbc.resultset.close.enable=false
 trace.jdbc.drivermanager.poolname.prefixes=jdbc:jeus:pool:,jdbc:weblogic:pool,jdbc:apache:commons:dbcp,jdbc:pointbase:server:,jdbc:cubrid,jdbc:oracle:thin,jdbc:mysql:,jdbc:sqlserver:,jdbc:microsoft:sqlserver:,jdbc:hsqldb:
 
 # 2.1.13 : default=false
-# Oracle JDBC Driver°¡ 9.2.0.x, 10.2.0.xÀÏ °æ¿ì Áö¿øµÊ.
-# JDBC Driver°ü·Ã ClassCastExceptionÀÌ ¹ß»ýÇÏÁö ¾ÊÀ½. 
+# Oracle JDBC Driverï¿½ï¿½ 9.2.0.x, 10.2.0.xï¿½ï¿½ ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½.
+# JDBC Driverï¿½ï¿½ï¿½ï¿½ ClassCastExceptionï¿½ï¿½ ï¿½ß»ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½. 
 trace.jdbc.oracle.connection.enable=false
 trace.jdbc.oracle.preparedstatement.enable=false
 trace.jdbc.oracle.callablestatement.enable=false
 trace.jdbc.oracle.statement.enable=false
 
-# 2.1.5 : default=false ( JDBC µð¹ö±ë ¼³Á¤½Ã¿¡¸¸ »ç¿ë : true·Î ¼³Á¤½Ã agent ·Î±×°¡ ±ÞÁõÇÔ )
+# 2.1.5 : default=false ( JDBC ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Ã¿ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ : trueï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ agent ï¿½Î±×°ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ )
 trace.jdbc.debug.enable=false
 trace.jdbc.debug.stacktrace.enable=false
 
@@ -96,10 +96,10 @@ trace.session.cookie.name=JSESSIONID
 trace.method.param.names=
 
 
-##### ¸Þ¼Òµå prefix, signature, return value Á¤º¸¸¦ ¼öÁý ¼³Á¤ #####
-# trace.capture.method.parameter.value.enable=true          : parameter value ¼öÁý ¿©ºÎ
-# trace.capture.method.return.value.enable=true             : retuen value ¼öÁý¿©ºÎ
-# trace.capture.method.truncate.value_len=50                : capture value ±æÀÌ Á¦ÇÑ
+##### ï¿½Þ¼Òµï¿½ prefix, signature, return value ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ #####
+# trace.capture.method.parameter.value.enable=true          : parameter value ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
+# trace.capture.method.return.value.enable=true             : retuen value ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+# trace.capture.method.truncate.value_len=50                : capture value ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
 trace.capture.method.parameter.value.enable=true
 trace.capture.method.return.value.enable=true
 trace.capture.method.truncate.value_len=50
