--- a/elevisor/super/config/sysmon.conf
+++ b/elevisor/super/config/sysmon.conf
@@ -3,8 +3,8 @@
 #-------------------------------------------------------------------------------
 
 #-- Server Info 
-server_info.ip=192.168.0.111
-server_info.sysmon.tcp.port=7711
+server_info.ip=%ELEVISOR_IG_SERVER_IP%
+server_info.sysmon.tcp.port=%ELEVISOR_SYSMON_COMMON_PORT%
 
 #-- console log.level
 log.level=off
@@ -16,12 +16,12 @@ log4j.max.backup.index=10
 
 #-- Sysmon Agent Info 
 agent_info.ip=
-agent_info.name=SYS1
+agent_info.name=%ELEVISOR_SYSMON_AGENT_NAME%
 agent_info.port=-1
 
 agent_info.file.encoding=KSC5601
 agent.enable=true
-agent.license=
+agent.license=%ELEVISOR_SYSMON_LICENSE%
 agent.lite.license=
 
 #- Agent Engine Config
