--- a/elevisor-jboss-eap6-s2i.yaml
+++ b/elevisor-jboss-eap6-s2i.yaml
@@ -7,8 +7,9 @@ metadata:
   annotations:
     description: Application template for JBOSS applications built with Elevisor using S2I.
     iconClass: icon-jboss
-    tags: tomcat,tomcat7,java,jboss,xpaas
-    version: 1.2.0
+    tags: eap,javaee,java,jboss,xpaas
+    version: 1.4.0
+    openshift.io/display-name: Red Hat JBoss EAP 6.4 (Elevisor)
   name: jboss-eap6-elevisor-s2i
 objects:
 - apiVersion: v1
@@ -108,8 +109,9 @@ objects:
     selector:
       deploymentConfig: ${APPLICATION_NAME}
     strategy:
-      type: Rolling
+      type: Recreate
     template:
+      serviceAccountName: ${SERVICE_ACCOUNT_NAME}
       metadata:
         labels:
           application: ${APPLICATION_NAME}
@@ -147,6 +149,18 @@ objects:
           - containerPort: 8080
             name: http
             protocol: TCP
+          livenessProbe:
+            exec:
+              command:
+              - "/bin/bash"
+              - "-c"
+              - "/opt/eap/bin/livenessProbe.sh"
+          readinessProbe:
+            exec:
+              command:
+              - "/bin/bash"
+              - "-c"
+              - "/opt/eap/bin/readinessProbe.sh"
         terminationGracePeriodSeconds: 60
     triggers:
     - imageChangeParams:
@@ -163,6 +177,11 @@ parameters:
   name: APPLICATION_NAME
   required: true
   value: jboss-eap6-elevisor-app
+- displayName: Service Account Name
+  description: The name of the service account to use for the deployment.
+  name: SERVICE_ACCOUNT_NAME
+  value: jboss
+  required: true
 - description: 'Custom hostname for http service route.  Leave blank for default hostname,
     e.g.: <application-name>-<project>.<default-domain-suffix>'
   name: HOSTNAME_HTTP
@@ -242,3 +261,8 @@ parameters:
   displayName: ELEVISOR_SYSMON_LICENSE
   name : ELEVISOR_SYSMON_LICENSE
   value : "E9K2-EU6B-ELHA-EGYR-EU63-ELHA-D4UEHRLQF"
+- displayName: Deploy Exploded Archives
+  description: Controls whether exploded deployment content should be automatically deployed
+  name: AUTO_DEPLOY_EXPLODED
+  value: 'false'
+  required: false
