--- a/elevisor/j2ee/config/EFJ.conf
+++ b/elevisor/j2ee/config/EFJ.conf
@@ -25,7 +25,7 @@ seculogic.site.code=site-code
 
 ##### Log Level #######
 log.level=off
-log.console.enable=false
+log.console.enable=true
 
 ##### Trace Config ##### 
 trace.enable=true
