--- a/elevisor/super/config/sysmon.conf
+++ b/elevisor/super/config/sysmon.conf
@@ -110,7 +110,7 @@ read.process.snap.enable=true
 read.process.enable=true
 read.network.enable=false
 read.netstat.enable=false
-read.device.enable=false
+read.device.enable=true
 read.file.system.enable=true
 
 
