--- a/elevisor-jboss-eap6-docker.yaml
+++ b/elevisor-jboss-eap6-docker.yaml
@@ -99,6 +99,20 @@ objects:
     - imageChange: {}
       type: ImageChange
     - type: ConfigChange
+- apiVersion: extensions/v1beta1
+  kind: HorizontalPodAutoscaler
+  metadata:
+    name: ${APPLICATION_NAME}
+  spec:
+    scaleRef:
+      kind: DeploymentConfig
+      name: ${APPLICATION_NAME}
+    apiVersion: v1
+    subresource: scale
+    minReplicas: 2
+    maxReplicas: 7
+    cpuUtilization:
+      targetPercentage: 50
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
