--- a/elevisor-jboss-eap6-docker.yaml
+++ b/elevisor-jboss-eap6-docker.yaml
@@ -99,20 +99,20 @@ objects:
     - imageChange: {}
       type: ImageChange
     - type: ConfigChange
-- apiVersion: extensions/v1beta1
-  kind: HorizontalPodAutoscaler
-  metadata:
-    name: ${APPLICATION_NAME}
-  spec:
-    scaleRef:
-      kind: DeploymentConfig
-      name: ${APPLICATION_NAME}
-    apiVersion: v1
-    subresource: scale
-    minReplicas: 2
-    maxReplicas: 7
-    cpuUtilization:
-      targetPercentage: 50
+#- apiVersion: extensions/v1beta1
+#  kind: HorizontalPodAutoscaler
+#  metadata:
+#    name: ${APPLICATION_NAME}
+#  spec:
+#    scaleRef:
+#      kind: DeploymentConfig
+#      name: ${APPLICATION_NAME}
+#    apiVersion: v1
+#    subresource: scale
+#    minReplicas: 2
+#    maxReplicas: 7
+#    cpuUtilization:
+#      targetPercentage: 50
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -153,8 +153,10 @@ objects:
             value: ${ELEVISOR_SYSMON_LICENSE}
           - name : ELEVISOR_GROUP_NAME
             value: ${ELEVISOR_GROUP_NAME}
-          - name : ELEVISOR_PUSH_INTERVAL
-            value: ${ELEVISOR_PUSH_INTERVAL}
+          - name : ELEVISOR_J2EE_PUSH_INTERVAL
+            value: ${ELEVISOR_J2EE_PUSH_INTERVAL}
+          - name : ELEVISOR_SYSMON_PUSH_INTERVAL
+            value: ${ELEVISOR_SYSMON_PUSH_INTERVAL}
           image: ${APPLICATION_NAME}
           imagePullPolicy: Always
           name: ${APPLICATION_NAME}
@@ -250,10 +252,14 @@ parameters:
   name: ELEVISOR_GROUP_NAME
   value : "SafeKorea"
   required: true
-- description: Elevisor Agent Push Period Time Unit/Sec
-  displayName: Elevisor Agent Push Period Time Unit/Sec
-  name: ELEVISOR_PUSH_INTERVAL
+- description: Elevisor J2EE Agent Push Period Time Unit/Sec
+  displayName: Elevisor J2EE Agent Push Period Time Unit/Sec
+  name: ELEVISOR_J2EE_PUSH_INTERVAL
   value : "1"
+- description: Elevisor SYSMON Agent Push Period Time Unit/Sec
+  displayName: Elevisor SYSMON Agent Push Period Time Unit/Sec
+  name: ELEVISOR_SYSMON_PUSH_INTERVAL
+  value : "2"
   required: true
 - description: ELEVISOR_J2EE_COMMON_PORT
   displayName: ELEVISOR_J2EE_COMMON_PORT
